--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.4",
     "form-data": "^3.0.0",
     "form-urlencoded": "^4.1.3",
     "isomorphic-unfetch": "^3.0.0",
