Use input server address

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsdom": "^16.2.0",
     "next": "^9.2.2",
     "node-html-parser": "^1.2.7",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
