--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.9.4",
+    "@material-ui/icons": "^4.9.1",
     "form-data": "^3.0.0",
     "form-urlencoded": "^4.1.3",
     "isomorphic-unfetch": "^3.0.0",
