--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "hubitat-update-manager",
   "version": "1.0.0",
   "description": "Check and update Hubitat Custom Apps and Drivers",
-  "main": "index.js",
+  "main": "electron/index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next build && next start"
+    "start": "next build && next start",
+    "electron": "electron ."
   },
   "keywords": [],
   "author": "Richard Peng",
@@ -14,11 +15,16 @@
   "dependencies": {
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
+    "electron-is-dev": "^1.1.0",
     "form-urlencoded": "^4.1.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.2",
     "node-html-parser": "^1.2.7",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "electron": "^8.0.2"
   }
 }
