--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next build && next start",
-    "electron": "electron ."
+    "next:start": "next build && next start",
+    "start": "electron .",
+    "start:prod": "NODE_ENV=production electron .",
+    "electron:package": "electron-packager ."
   },
   "keywords": [],
   "author": "Richard Peng",
@@ -16,6 +18,7 @@
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "electron-is-dev": "^1.1.0",
+    "electron-unhandled": "^3.0.2",
     "form-urlencoded": "^4.1.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.2",
@@ -25,6 +28,7 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "electron": "^8.0.2"
+    "electron": "^8.0.2",
+    "electron-packager": "^14.2.1"
   }
 }
