--- a/package.json
+++ b/package.json
@@ -1,23 +1,57 @@
 {
   "name": "hubitat-update-manager",
+  "productName": "hubitat-update-manager",
   "version": "1.0.0",
   "description": "Check and update Hubitat Custom Apps and Drivers",
-  "main": "electron/index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "next build && electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\"",
     "dev": "next",
     "build": "next build",
-    "next:start": "next build && next start",
-    "start": "electron .",
-    "electron:package": "electron-packager ."
+    "next:start": "next build && next start"
   },
   "keywords": [],
-  "author": "Richard Peng",
+  "author": {
+    "name": "Richard Peng",
+    "email": "richard@richardpeng.com"
+  },
   "license": "ISC",
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "hubitat_update_manager"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "electron-is-dev": "^1.1.0",
-    "electron-unhandled": "^3.0.2",
+    "electron-squirrel-startup": "^1.0.0",
     "form-urlencoded": "^4.1.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.2",
@@ -27,7 +61,11 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "electron": "^8.0.2",
-    "electron-packager": "^14.2.1"
+    "@electron-forge/cli": "^6.0.0-beta.50",
+    "@electron-forge/maker-deb": "^6.0.0-beta.50",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.50",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
+    "@electron-forge/maker-zip": "^6.0.0-beta.50",
+    "electron": "8.0.2"
   }
 }
