--- a/package.json
+++ b/package.json
@@ -3,18 +3,50 @@
   "productName": "hubitat-update-manager",
   "version": "1.0.0",
   "description": "Check and update Hubitat Custom Apps and Drivers",
-  "main": "src/server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next build && next start"
+    "start": "next build && next start",
+    "start:gui": "electron-forge start",
+    "package": "electron-forge package",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\"",
+    "make:all": "next build && npm run make:darwin && npm run make:linux && npm run make:win32",
+    "make:linux": "npm run make:linux:arm64 && npm run make:linux:armv7l && npm run make:linux:x64",
+    "make:linux:armv7l": "electron-forge make --platform linux --arch armv7l",
+    "make:linux:arm64": "electron-forge make --platform linux --arch arm64",
+    "make:linux:x64": "electron-forge make --platform linux --arch x64",
+    "make:darwin": "electron-forge make --platform darwin",
+    "make:win32": "electron-forge make --platform win32"
   },
   "keywords": [],
   "author": "Richard Peng <richard@richardpeng.com>",
   "license": "ISC",
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "hubitat_update_manager"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-dmg"
+        },
+        {
+          "name": "@electron-forge/maker-deb"
+        }
+      ]
+    }
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
+    "electron-is-dev": "^1.1.0",
+    "electron-squirrel-startup": "^1.0.0",
     "form-urlencoded": "^4.1.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.2",
@@ -23,7 +55,16 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.50",
+    "@electron-forge/maker-deb": "^6.0.0-beta.50",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.50",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.50",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.50",
+    "@electron-forge/maker-zip": "^6.0.0-beta.50",
+    "@electron-forge/publisher-github": "^6.0.0-beta.50",
+    "electron": "8.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/richardpeng/hubitat-update-manager.git"
